--- a/SharpWeb/composer.json
+++ b/SharpWeb/composer.json
@@ -4,10 +4,23 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.1",
+        "symfony/asset": "^4.0",
+        "symfony/cache": "^4.0",
+        "symfony/config": "^4.0",
         "symfony/console": "^4.0",
+        "symfony/dependency-injection": "^4.0",
+        "symfony/event-dispatcher": "^4.0",
+        "symfony/filesystem": "^4.0",
+        "symfony/finder": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/security": "^4.0",
+        "symfony/translation": "^4.0",
+        "symfony/validator": "^4.0",
+        "symfony/var-dumper": "^4.0",
         "symfony/web-server-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
