Realizada a leitura de metodos c# no lua utilziando a biblioteca moonsharp, testando recebimento de pacotes do cliente.

--- a/SharpServer/src/SharpServer.Server/SharpServer.Server.csproj
+++ b/SharpServer/src/SharpServer.Server/SharpServer.Server.csproj
@@ -5,4 +5,17 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MoonSharp" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharpServer.Database\SharpServer.Database.csproj" />
+    <ProjectReference Include="..\SharpServer.Domain\SharpServer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
