--- a/SharpServer/src/SharpServer.Server/SharpServer.Server.csproj
+++ b/SharpServer/src/SharpServer.Server/SharpServer.Server.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="MoonSharp" Version="2.0.0" />
+    <PackageReference Include="System.Security.Cryptography.OpenSsl" Version="4.4.0" />
   </ItemGroup>
 
   <ItemGroup>
