Renomeado Server para GameServer

--- a/CoreOpenTibiaServer/src/CoreOpenTibiaServer.GameServer.Tests/COTS.GameServer.Tests.csproj
+++ b/CoreOpenTibiaServer/src/CoreOpenTibiaServer.GameServer.Tests/COTS.GameServer.Tests.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreOpenTibiaServer.Server\COTS.Server.csproj" />
+    <ProjectReference Include="..\CoreOpenTibiaServer.GameServer\COTS.GameServer.csproj" />
   </ItemGroup>
 
 </Project>
