--- a/CoreOpenTibiaServer/src/CoreOpenTibiaServer.GameServer/COTS.GameServer.csproj
+++ b/CoreOpenTibiaServer/src/CoreOpenTibiaServer.GameServer/COTS.GameServer.csproj
@@ -32,6 +32,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CoreOpenTibiaServer.Infra.CrossCutting.Network\COTS.Infra.CrossCutting.Network.csproj" />
+    <ProjectReference Include="..\COTS.Infra.CrossCutting.Ioc\COTS.Infra.CrossCutting.Ioc.csproj" />
   </ItemGroup>
 
 </Project>
