--- a/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
+++ b/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
@@ -31,8 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoreOpenTibiaServer.Infra.CrossCutting.Network\COTS.Infra.CrossCutting.Network.csproj" />
-    <ProjectReference Include="..\COTS.Infra.CrossCutting.Ioc\COTS.Infra.CrossCutting.Ioc.csproj" />
+    <ProjectReference Include="..\COTS.Domain\COTS.Domain.csproj" />
+    <ProjectReference Include="..\COTS.Infra.CrossCutting.Network\COTS.Infra.CrossCutting.Network.csproj" />
   </ItemGroup>
 
 </Project>
