EditorConfig adicionado a todos projetos.

--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="editorconfig" Version="0.12.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
