--- a/CoreOpenTibiaServer/src/COTS.Domain/COTS.Domain.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Domain/COTS.Domain.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="editorconfig" Version="0.12.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="MoonSharp" Version="2.0.0" />
   </ItemGroup>
