Asking StackOverflow for help

--- a/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
+++ b/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
@@ -12,8 +12,9 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LangVersion>latest</LangVersion>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
