--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network.Tests/COTS.Infra.CrossCutting.Network.Tests.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network.Tests/COTS.Infra.CrossCutting.Network.Tests.csproj
@@ -4,6 +4,16 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
