Removed the option to even target x32 and AnyCpu.

--- a/CoreOpenTibiaServer/src/COTS.Domain/COTS.Domain.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Domain/COTS.Domain.csproj
@@ -5,6 +5,10 @@
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <WarningsAsErrors>NU1605</WarningsAsErrors>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MoonSharp" Version="2.0.0" />
   </ItemGroup>
