--- a/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
+++ b/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <LangVersion>7</LangVersion>
+    <LangVersion>latest</LangVersion>
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
