--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="editorconfig" Version="0.12.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
