--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Security/COTS.Infra.CrossCutting.Security.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Security/COTS.Infra.CrossCutting.Security.csproj
@@ -8,6 +8,10 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="editorconfig" Version="0.12.1" />
   </ItemGroup>
