--- a/CoreOpenTibiaServer/.editorconfig
+++ b/CoreOpenTibiaServer/.editorconfig
@@ -7,11 +7,11 @@ root                                                                     = true
 
 # Public stuff
 dotnet_naming_rule.public_stuff_casing.symbols 							= public_stuff_symbol
+dotnet_naming_rule.public_stuff_casing.style							= public_stuff_style
+dotnet_naming_rule.public_stuff_casing.severity							= error
 dotnet_naming_symbols.public_stuff_symbol.applicable_kinds              = *
 dotnet_naming_symbols.public_stuff_symbol.applicable_accessibilities	= public
-dotnet_naming_rule.public_stuff_casing.style							= public_stuff_style
-dotnet_naming_style.public_stuff_style.capitalization					= camel_case
-dotnet_naming_rule.public_stuff_style.severity							= error
+dotnet_naming_style.public_stuff_style.capitalization					= pascal_case
 
 # Private stuff
 
@@ -27,23 +27,23 @@ charset 																= utf-8
 end_of_line																= lf
 
 # Requests "this." and "Me." when applicable
-dotnet_style_qualification_for_field                                    = false : suggestion
-dotnet_style_qualification_for_property                                 = true : suggestion
-dotnet_style_qualification_for_method                                   = true : warning
-dotnet_style_qualification_for_event                                    = true : warning
+dotnet_style_qualification_for_field                                    = false : error
+dotnet_style_qualification_for_property                                 = false : error
+dotnet_style_qualification_for_method                                   = false : error
+dotnet_style_qualification_for_event                                    = false : error
 
 # Prefer "var" everywhere
-csharp_style_var_for_built_in_types                                     = true : suggestion
-csharp_style_var_when_type_is_apparent                                  = true : suggestion
-csharp_style_var_elsewhere                                              = false : suggestion
+csharp_style_var_for_built_in_types                                     = true : error
+csharp_style_var_when_type_is_apparent                                  = true : error
+csharp_style_var_elsewhere                                              = false : error
 
 # Prefer method-like constructs to have a block body
-csharp_style_expression_bodied_methods                                  = when_on_single_line : warning
+csharp_style_expression_bodied_methods                                  = when_on_single_line : error
 csharp_style_expression_bodied_constructors                             = false : error
-csharp_style_expression_bodied_operators                                = when_on_single_line : warning
+csharp_style_expression_bodied_operators                                = when_on_single_line : error
 csharp_style_expression_bodied_properties                               = false : error
 csharp_style_expression_bodied_properties                               = false : error
-csharp_style_expression_bodied_operators                                = when_on_single_line : suggestion
+csharp_style_expression_bodied_operators                                = when_on_single_line : error
 
 # Prefer property-like constructs to have an expression-body
 csharp_style_expression_bodied_properties                               = true : none
@@ -51,7 +51,7 @@ csharp_style_expression_bodied_indexers                                 = true :
 csharp_style_expression_bodied_accessors                                = true : none
 
 # Spacing
-csharp_space_after_cast                                                 = true : warning
+csharp_space_after_cast                                                 = true : error
 csharp_space_after_colon_in_inheritance_clause                          = true : error
 csharp_space_after_comma                                                = true : error
 csharp_space_after_dot                                                  = false : error
