Fixing naming conventions issues.

--- a/CoreOpenTibiaServer/.editorconfig
+++ b/CoreOpenTibiaServer/.editorconfig
@@ -14,6 +14,13 @@ dotnet_naming_symbols.public_stuff_symbol.applicable_accessibilities	= public
 dotnet_naming_style.public_stuff_style.capitalization					= pascal_case
 
 # Private stuff
+dotnet_naming_rule.private_stuff.symbols 								= private_stuff_symbol
+dotnet_naming_rule.private_stuff.style									= private_stuff_style
+dotnet_naming_rule.private_stuff_casing.severity						= error
+dotnet_naming_symbols.private_stuff_symbol.applicable_kinds             = *
+dotnet_naming_symbols.private_stuff_symbol.applicable_accessibilities	= internal or friend, private, protected, protected_internal, protected_friend
+dotnet_naming_style.private_stuff_style.capitalization					= camel_case
+dotnet_naming_style.private_stuff_style.required_prefix					= _
 
 
 #--------------------------------------------------------------------------------------------# 
@@ -33,9 +40,9 @@ dotnet_style_qualification_for_method                                   = false 
 dotnet_style_qualification_for_event                                    = false : error
 
 # Prefer "var" everywhere
-csharp_style_var_for_built_in_types                                     = true : error
+csharp_style_var_for_built_in_types                                     = false : none
 csharp_style_var_when_type_is_apparent                                  = true : error
-csharp_style_var_elsewhere                                              = false : error
+csharp_style_var_elsewhere                                              = true : error
 
 # Prefer method-like constructs to have a block body
 csharp_style_expression_bodied_methods                                  = when_on_single_line : error
