--- a/CoreOpenTibiaServer/.editorconfig
+++ b/CoreOpenTibiaServer/.editorconfig
@@ -5,6 +5,14 @@ root                                                                     = true
 # Naming Conventions
 #--------------------------------------------------------------------------------------------#
 
+# Const definitions
+dotnet_naming_rule.const_definition.symbols 								= const_definition_symbols
+dotnet_naming_rule.const_definition.style									= const_definition_style
+dotnet_naming_rule.const_definition.severity								= error
+dotnet_naming_symbols.const_definition_symbols.required_modifiers 			= const
+dotnet_naming_symbols.const_definition_symbols.applicable_kinds          	= *
+dotnet_naming_style.const_definition_style.capitalization					= pascal_case
+
 # Type definitions
 dotnet_naming_rule.type_definition.symbols 									= type_definition_symbols
 dotnet_naming_rule.type_definition.style									= type_definition_style
@@ -39,11 +47,11 @@ dotnet_naming_style.private_style.capitalization					= camel_case
 dotnet_naming_style.private_style.required_prefix					= _
 
 # Parameters
-dotnet_naming_rule.parameter_rule.symbols 							= parameter_symbols
-dotnet_naming_rule.parameter_rule.style								= parameter_style
-dotnet_naming_rule.parameter_rule.severity							= error
-dotnet_naming_symbols.parameter_symbols.applicable_kinds            = *
-dotnet_naming_style.parameter_style.capitalization					= camel_case
+dotnet_naming_rule.parameter_rule.symbols					= parameter_symbols
+dotnet_naming_rule.parameter_rule.style						= parameter_style
+dotnet_naming_rule.parameter_rule.severity					= error
+dotnet_naming_symbols.parameter_symbols.applicable_kinds	= *
+dotnet_naming_style.parameter_style.capitalization			= camel_case
 
 
 #--------------------------------------------------------------------------------------------# 
@@ -51,71 +59,71 @@ dotnet_naming_style.parameter_style.capitalization					= camel_case
 #--------------------------------------------------------------------------------------------#
 
 # Basic EditorConfig
-indent_style 															= tab
-insert_final_newline 													= false
-charset 																= utf-8
-end_of_line																= lf
+indent_style 			= tab
+insert_final_newline 	= false
+charset 				= utf-8
+end_of_line				= lf
 
 # Requests "this." and "Me." when applicable
-dotnet_style_qualification_for_field                                    = false : error
-dotnet_style_qualification_for_property                                 = false : error
-dotnet_style_qualification_for_method                                   = false : error
-dotnet_style_qualification_for_event                                    = false : error
+dotnet_style_qualification_for_field		= false : error
+dotnet_style_qualification_for_property		= false : error
+dotnet_style_qualification_for_method		= false : error
+dotnet_style_qualification_for_event		= false : error
 
 # Prefer "var" everywhere
-csharp_style_var_for_built_in_types                                     = false : none
-csharp_style_var_when_type_is_apparent                                  = true : error
-csharp_style_var_elsewhere                                              = true : error
+csharp_style_var_for_built_in_types			= false : none
+csharp_style_var_when_type_is_apparent		= true : error
+csharp_style_var_elsewhere					= true : error
 
 # Prefer method-like constructs to have a block body
-csharp_style_expression_bodied_methods                                  = when_on_single_line : error
-csharp_style_expression_bodied_constructors                             = false : error
-csharp_style_expression_bodied_operators                                = when_on_single_line : error
-csharp_style_expression_bodied_properties                               = false : error
-csharp_style_expression_bodied_properties                               = false : error
-csharp_style_expression_bodied_operators                                = when_on_single_line : error
+csharp_style_expression_bodied_method			= when_on_single_line : error
+csharp_style_expression_bodied_constructors		= false : error
+csharp_style_expression_bodied_operators		= when_on_single_line : error
+csharp_style_expression_bodied_properties		= false : error
+csharp_style_expression_bodied_properties		= false : error
+csharp_style_expression_bodied_operators		= when_on_single_line : error
 
 # Prefer property-like constructs to have an expression-body
-csharp_style_expression_bodied_properties                               = true : none
-csharp_style_expression_bodied_indexers                                 = true : none
-csharp_style_expression_bodied_accessors                                = true : none
+csharp_style_expression_bodied_properties	= true : none
+csharp_style_expression_bodied_indexers		= true : none
+csharp_style_expression_bodied_accessors	= true : none
 
 # Spacing
-csharp_space_after_cast                                                 = true : error
-csharp_space_after_colon_in_inheritance_clause                          = true : error
-csharp_space_after_comma                                                = true : error
-csharp_space_after_dot                                                  = false : error
-csharp_space_after_keywords_in_control_flow_statements                  = true : error
-csharp_space_after_semicolon_in_for_statement                           = true : error
-csharp_space_around_binary_operators                                    = before_and_after : error
-csharp_space_around_declaration_statements                              = do_not_ignore : error
-csharp_space_before_colon_in_inheritance_clause                         = true : error
-csharp_space_before_comma                                               = false : error
-csharp_space_before_dot                                                 = false : error
-csharp_space_before_open_square_brackets                                = false : error
-csharp_space_before_semicolon_in_for_statement                          = false : error
-csharp_space_between_empty_square_brackets                              = false : error
-csharp_space_between_method_call_empty_parameter_list_parentheses       = false : error
-csharp_space_between_method_call_name_and_opening_parenthesis           = false : error
-csharp_space_between_method_call_parameter_list_parentheses             = false : error
-csharp_space_between_method_declaration_empty_parameter_list_parentheses= false : error
-csharp_space_between_method_declaration_name_and_open_parenthesis       = false : error
-csharp_space_between_method_declaration_parameter_list_parentheses      = false : error
-csharp_space_between_parentheses                                        = false : error
-csharp_space_between_square_brackets                                    = false : error
+csharp_space_after_cast                                                 	= true : error
+csharp_space_after_colon_in_inheritance_clause                          	= true : error
+csharp_space_after_comma                                                	= true : error
+csharp_space_after_dot                                                  	= false : error
+csharp_space_after_keywords_in_control_flow_statements                  	= true : error
+csharp_space_after_semicolon_in_for_statement                           	= true : error
+csharp_space_around_binary_operators                                    	= before_and_after : error
+csharp_space_around_declaration_statements                              	= do_not_ignore : error
+csharp_space_before_colon_in_inheritance_clause                         	= true : error
+csharp_space_before_comma                                               	= false : error
+csharp_space_before_dot                                                 	= false : error
+csharp_space_before_open_square_brackets                                	= false : error
+csharp_space_before_semicolon_in_for_statement                          	= false : error
+csharp_space_between_empty_square_brackets                              	= false : error
+csharp_space_between_method_call_empty_parameter_list_parentheses       	= false : error
+csharp_space_between_method_call_name_and_opening_parenthesis           	= false : error
+csharp_space_between_method_call_parameter_list_parentheses             	= false : error
+csharp_space_between_method_declaration_empty_parameter_list_parentheses	= false : error
+csharp_space_between_method_declaration_name_and_open_parenthesis       	= false : error
+csharp_space_between_method_declaration_parameter_list_parentheses      	= false : error
+csharp_space_between_parentheses                                        	= false : error
+csharp_space_between_square_brackets                                    	= false : error
 
 # New line
-csharp_new_line_before_open_brace                                       = none : error
-csharp_new_line_before_else                                             = none : error
-csharp_new_line_before_catch                                            = none : error
-csharp_new_line_before_finally                                          = none : error
-csharp_new_line_before_members_in_object_initializers                   = true : error
-csharp_new_line_before_members_in_anonymous_types                       = true : error
-csharp_new_line_within_query_expression_clauses                         = true : error
+csharp_new_line_before_open_brace						= none : error
+csharp_new_line_before_else								= none : error
+csharp_new_line_before_catch							= none : error
+csharp_new_line_before_finally							= none : error
+csharp_new_line_before_members_in_object_initializers	= true : error
+csharp_new_line_before_members_in_anonymous_types		= true : error
+csharp_new_line_within_query_expression_clauses			= true : error
 
 # Indentation
-csharp_indent_block_contents                                            = true : error
-csharp_indent_braces                                                    = false : error
-csharp_indent_case_contents                                             = true : error
-csharp_indent_switch_labels                                             = true : error
-csharp_indent_labels                                                    = flush_left : error
+csharp_indent_block_contents	= true : error
+csharp_indent_braces			= false : error
+csharp_indent_case_contents		= true : error
+csharp_indent_switch_labels		= true : error
+csharp_indent_labels			= flush_left : error
