--- a/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
+++ b/CoreOpenTibiaServer/src/COTS.GameServer/COTS.GameServer.csproj
@@ -40,6 +40,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
     <PackageReference Include="MoonSharp" Version="2.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
   </ItemGroup>
 
   <ItemGroup>
