--- a/CoreOpenTibiaServer/.editorconfig
+++ b/CoreOpenTibiaServer/.editorconfig
@@ -6,28 +6,37 @@ root                                                                     = true
 #--------------------------------------------------------------------------------------------#
 
 # Const definitions
-dotnet_naming_rule.const_definition.symbols 								= const_definition_symbols
-dotnet_naming_rule.const_definition.style									= const_definition_style
-dotnet_naming_rule.const_definition.severity								= error
-dotnet_naming_symbols.const_definition_symbols.required_modifiers 			= const
-dotnet_naming_symbols.const_definition_symbols.applicable_kinds          	= *
-dotnet_naming_style.const_definition_style.capitalization					= pascal_case
+dotnet_naming_rule.const_definition.symbols 									= const_definition_symbols
+dotnet_naming_rule.const_definition.style										= const_definition_style
+dotnet_naming_rule.const_definition.severity									= error
+dotnet_naming_symbols.const_definition_symbols.required_modifiers 				= const
+dotnet_naming_symbols.const_definition_symbols.applicable_kinds          		= *
+dotnet_naming_style.const_definition_style.capitalization						= pascal_case
+
+# interface definitions
+dotnet_naming_rule.interface_definition.symbols 								= interface_definition_symbols
+dotnet_naming_rule.interface_definition.style									= interface_definition_style
+dotnet_naming_rule.interface_definition.severity								= error
+dotnet_naming_symbols.interface_definition_symbols.applicable_kinds          	= interface
+dotnet_naming_symbols.interface_definition_symbols.applicable_accessibilities	= *
+dotnet_naming_style.interface_definition_style.capitalization					= pascal_case
+dotnet_naming_style.interface_definition_style.required_prefix					= I
 
 # Type definitions
-dotnet_naming_rule.type_definition.symbols 									= type_definition_symbols
-dotnet_naming_rule.type_definition.style									= type_definition_style
-dotnet_naming_rule.type_definition.severity									= error
-dotnet_naming_symbols.type_definition_symbols.applicable_kinds          	= class, struct, interface, enum
-dotnet_naming_symbols.type_definition_symbols.applicable_accessibilities	= *
-dotnet_naming_style.type_definition_style.capitalization					= pascal_case
+dotnet_naming_rule.type_definition.symbols 										= type_definition_symbols
+dotnet_naming_rule.type_definition.style										= type_definition_style
+dotnet_naming_rule.type_definition.severity										= error
+dotnet_naming_symbols.type_definition_symbols.applicable_kinds          		= class, struct, interface, enum
+dotnet_naming_symbols.type_definition_symbols.applicable_accessibilities		= *
+dotnet_naming_style.type_definition_style.capitalization						= pascal_case
 
 # Methods
-dotnet_naming_rule.method_definition.symbols 								= method_definition_symbols
-dotnet_naming_rule.method_definition.style									= method_definition_style
-dotnet_naming_rule.method_definition.severity								= error
-dotnet_naming_symbols.method_definition_symbols.applicable_kinds          	= method
-dotnet_naming_symbols.method_definition_symbols.applicable_accessibilities	= *
-dotnet_naming_style.method_definition_style.capitalization					= pascal_case
+dotnet_naming_rule.method_definition.symbols 									= method_definition_symbols
+dotnet_naming_rule.method_definition.style										= method_definition_style
+dotnet_naming_rule.method_definition.severity									= error
+dotnet_naming_symbols.method_definition_symbols.applicable_kinds          		= method
+dotnet_naming_symbols.method_definition_symbols.applicable_accessibilities		= *
+dotnet_naming_style.method_definition_style.capitalization						= pascal_case
 
 # Public accessibility
 dotnet_naming_rule.public.symbols 									= public_symbols
@@ -42,37 +51,37 @@ dotnet_naming_rule.private.symbols 									= private_symbols
 dotnet_naming_rule.private.style									= private_style
 dotnet_naming_rule.private.severity									= error
 dotnet_naming_symbols.private_symbols.applicable_kinds             	= *
-dotnet_naming_symbols.private_symbols.applicable_accessibilities	= internal or friend, private, protected, protected_internal, protected_friend
+dotnet_naming_symbols.private_symbols.applicable_accessibilities	= internal, private, protected, protected_internal, protected_friend
 dotnet_naming_style.private_style.capitalization					= camel_case
 dotnet_naming_style.private_style.required_prefix					= _
 
 # Parameters
-dotnet_naming_rule.parameter_rule.symbols					= parameter_symbols
-dotnet_naming_rule.parameter_rule.style						= parameter_style
-dotnet_naming_rule.parameter_rule.severity					= error
-dotnet_naming_symbols.parameter_symbols.applicable_kinds	= *
-dotnet_naming_style.parameter_style.capitalization			= camel_case
+dotnet_naming_rule.parameter_rule.symbols							= parameter_symbols
+dotnet_naming_rule.parameter_rule.style								= parameter_style
+dotnet_naming_rule.parameter_rule.severity							= error
+dotnet_naming_symbols.parameter_symbols.applicable_kinds			= *
+dotnet_naming_style.parameter_style.capitalization					= camel_case
 
 #-------------------------------------------------------------------------------# 
 # Coding conventions
 #-------------------------------------------------------------------------------#
 
 # Require accessibility modifier
-dotnet_style_require_accessibility_modifiers 	= true : error
-csharp_preferred_modifier_order					= public, private, protected, internal, static, extern, new, virtual, sealed, abstract, override, readonly, unsafe, volatile, async:none
+dotnet_style_require_accessibility_modifiers 	= always : error
+csharp_preferred_modifier_order					= public, private, protected, internal, static, extern, new, virtual, abstract, sealed, override, readonly, unsafe, volatile, async : suggestion
 
 #Inlined variable declarations
-csharp_style_inlined_variable_declaration	= true : error
+csharp_style_inlined_variable_declaration		= true : error
 
 # Requests "this." and "Me." when applicable
-dotnet_style_qualification_for_field		= false : error
-dotnet_style_qualification_for_property		= false : error
-dotnet_style_qualification_for_method		= false : error
-dotnet_style_qualification_for_event		= false : error
+dotnet_style_qualification_for_field			= false : error
+dotnet_style_qualification_for_property			= false : error
+dotnet_style_qualification_for_method			= false : error
+dotnet_style_qualification_for_event			= false : error
 
 # Prefer "var" everywhere
 # csharp_style_var_for_built_in_types			= false : none
-csharp_style_var_when_type_is_apparent		= true : error
+csharp_style_var_when_type_is_apparent			= true : error
 # csharp_style_var_elsewhere					= true : error
 
 # Prefer method-like constructs to have a block body
@@ -84,9 +93,9 @@ csharp_style_expression_bodied_properties		= false : error
 csharp_style_expression_bodied_operators		= when_on_single_line : error
 
 # Prefer property-like constructs to have an expression-body
-csharp_style_expression_bodied_properties	= true : none
-csharp_style_expression_bodied_indexers		= true : none
-csharp_style_expression_bodied_accessors	= true : none
+csharp_style_expression_bodied_properties		= true : none
+csharp_style_expression_bodied_indexers			= true : none
+csharp_style_expression_bodied_accessors		= true : none
 
 # Spacing
 csharp_space_after_cast                                                 	= true : error
