--- a/CoreOpenTibiaServer/src/COTS.GameServer.Tests/COTS.GameServer.Tests.csproj
+++ b/CoreOpenTibiaServer/src/COTS.GameServer.Tests/COTS.GameServer.Tests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
     <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
   </ItemGroup>
 
   <ItemGroup>
