--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="editorconfig" Version="0.12.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
   </ItemGroup>
 
 </Project>
