--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Security/COTS.Infra.CrossCutting.Security.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Security/COTS.Infra.CrossCutting.Security.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="editorconfig" Version="0.12.1" />
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
   </ItemGroup>
 
 </Project>
