--- a/CoreOpenTibiaServer/src/COTS.Infra.Data/COTS.Data.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.Data/COTS.Data.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" />
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
   </ItemGroup>
 
   <ItemGroup>
