--- a/CoreOpenTibiaServer/src/COTS.GameServer.Tests/COTS.GameServer.Tests.csproj
+++ b/CoreOpenTibiaServer/src/COTS.GameServer.Tests/COTS.GameServer.Tests.csproj
@@ -6,6 +6,8 @@
     <IsPackable>false</IsPackable>
 
     <Platforms>AnyCPU;x64</Platforms>
+
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
