--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Network/COTS.Infra.CrossCutting.Network.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
