--- a/CoreOpenTibiaServer/src/COTS.Domain/COTS.Domain.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Domain/COTS.Domain.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="editorconfig" Version="0.12.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="MoonSharp" Version="2.0.0" />
     <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
