Changed target language version to latest minor.

--- a/COMMO.Network/COMMO.Network.csproj
+++ b/COMMO.Network/COMMO.Network.csproj
@@ -19,6 +19,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
