Fixing target framework (#40)
* Converted COMMO.Domain to a .Net Core class library

* Changed COMMO.Domain language to latest minor.

* Updated COMMO.Network target language version.

* Fixed Network.Tests target language version.

* Changed Network.Tests output to Library instead of executable.

* Removed all references to AnyCpu.

--- a/COMMO.Network.Tests/COMMO.Network.Tests.csproj
+++ b/COMMO.Network.Tests/COMMO.Network.Tests.csproj
@@ -5,15 +5,18 @@
 
     <IsPackable>false</IsPackable>
 
-    <Platforms>AnyCPU;x64</Platforms>
-  </PropertyGroup>
+    <Platforms>x64</Platforms>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <ApplicationIcon />
+
+    <OutputType>Library</OutputType>
+
+    <StartupObject />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
