Refactoring COMMO.Network (#43)
* Refactored Network.Security.XTea to use Span instead of array and BufferRepresentation

* Added new optional parameter to XTea's methods to allow different number of rounds.

* Deleted unused classes.

* Refactored Adler32 related classes.

Renamed static class Tools to Checksum.
Renamed AdlerChecksum to Adler32.
Moved Checksum to parent namespace (COMMO.Network).

* Fixed a critical issue with XTea using wrong key length.

* Created new class OutputMessage.

* Converted tests to xUnit.

* Updated NuGet packages of solution.

Minor changes to OutputMessage to comply with updated packages.

* Moved XTea to parent namespace.

--- a/COMMO.Network.Tests/COMMO.Network.Tests.csproj
+++ b/COMMO.Network.Tests/COMMO.Network.Tests.csproj
@@ -6,28 +6,13 @@
     <IsPackable>false</IsPackable>
 
     <Platforms>x64</Platforms>
-
-    <ApplicationIcon />
-
-    <OutputType>Library</OutputType>
-
-    <StartupObject />
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>latest</LangVersion>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.2.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.2.0" />
-    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
+    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
